# Ascent-openMVG

./: .dockerignore  .gitignore  Dockerfile.gpu  docker-compose.yaml  extract_frames.py  pyproject.toml
src/software/SfM/python/external_features_demo/: README.md  kornia_demo.py
